--- a/angular.json
+++ b/angular.json
@@ -95,8 +95,7 @@
             ],
             "styles": [
               "@angular/material/prebuilt-themes/deeppurple-amber.css",
-              "src/styles.css",
-              "node_modules/materialize-css/dist/css/materialize.css"
+              "src/styles.css"
             ],
             "scripts": []
           }
