--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "express": "^4.18.2",
     "js": "^0.1.0",
     "materialize-css": "^1.0.0-rc.2",
+    "ngx-pagination": "^6.0.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
