--- a/angular.json
+++ b/angular.json
@@ -33,11 +33,7 @@
               "node_modules/materialize-css/dist/js/materialize.js",
               "src/assets/js/funcionesM.js"
             ],
-            "server": "src/main.server.ts",
-            "prerender": true,
-            "ssr": {
-              "entry": "server.ts"
-            }
+            "server": "src/main.server.ts"
           },
           "configurations": {
             "production": {
